--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3:9'
+version: '3.9'
 
 services:
-  mysql:
+  mysql_mercafacil:
     image: mysql
     container_name: mysql_mercafacil
     restart: always
@@ -16,16 +16,15 @@ services:
     - TZ=$TZ
     ports:
       - "${MYSQL_PORT}:3306"
-    command: --default-authentication-plugin=mysql_native_password
     healthcheck:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       interval: 10s
       timeout: 20s
       retries: 10
-    network:
+    networks:
       - mercafacil
 
-  postgresql:
+  postgres_mercafacil:
     image: postgres
     container_name: postgres_mercafacil
     restart: always
@@ -48,19 +47,20 @@ services:
 
   contacts_api:
     build: .
+    image: contacts_api
     container_name: contacts_api
     restart: always
     ports:
-      - "${FLASK_PORT}:5000"
+      - "${FLASK_PORT}:${FLASK_PORT}"
     env_file:
       - .env
     networks:
       - mercafacil
     depends_on:
-      postgres:
+      postgres_mercafacil:
         condition: service_healthy
-      mysql:
-        condition: service_started
+      mysql_mercafacil:
+        condition: service_healthy
 
 networks:
   mercafacil:
