Feat: Alterando volumes no compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: mysql_mercafacil
     restart: always
     volumes:
-      - mysql_mercafacil_4:/var/lib/mysql
+      - mysql_mercafacil:/var/lib/mysql
     environment:
     - MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
     - MYSQL_DATABASE=$MYSQL_DATABASE
@@ -29,7 +29,7 @@ services:
     container_name: postgres_mercafacil
     restart: always
     volumes:
-      - postgres_mercafacil_4:/var/lib/postgresql/data
+      - postgres_mercafacil:/var/lib/postgresql/data
     ports:
       - $POSTGRES_PORT:5432
     environment:
@@ -75,5 +75,5 @@ services:
 networks:
   mercafacil:
 volumes:
-  postgres_mercafacil_4:
-  mysql_mercafacil_4:
+  postgres_mercafacil:
+  mysql_mercafacil:
